syntax = "proto3";

package SvmLiteModel;

// Feature and weight.
message FeatureCount {
  uint32 feature_number = 1;
  uint32 count = 2;
}

message SupportVector {
  // The weight of this support vector.
  double weight = 1;
  // Each feature
  repeated FeatureCount feature = 2;
  // ID
  optional string id = 3;
}

message SvmLiteModel {
  optional int32 kernel_type = 1;

  repeated double kernel_parameter = 2;

  optional double dash_u = 3;

  optional int32 highest_feature__index = 4;

  optional int32 number_training_documents = 5;

  optional double threshold_b = 6;

  repeated SupportVector support_vector = 7;
}
